syntax = "proto3";

option go_package = "api/core";
package api;

service CoreService{
	rpc Prompt(PromptRequest) returns (PromptResponse);
	rpc Feedback(FeedbackRequest) returns (FeedbackResponse);
	rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

message PromptRequest{
	string text = 1;
	string limit = 2;
}

message PromptResponse{
	string text = 1;
	double processingTime = 2;
}

message FeedbackRequest{
	bool mark = 1;
	string prompt = 2;
	string response = 3;
}

message FeedbackResponse{
}

message HealthRequest{}

message HealthResponse{
	bool healthy = 1;
}